基本架構建立

--- a/index.html
+++ b/index.html
@@ -1,11 +1,135 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
+    <link rel="stylesheet" href="./practiceCSS.css">
 </head>
+
 <body>
-    <p>the first demo</p>
+    <header>
+        <div class="nav-bar">
+            <div class="logo">MONOGRAM</div>
+            <nav>
+                <ul class="menu">
+                    <li class="menu-item">HOW IT WORKS</li>
+                    <li class="menu-item">WORK FLOWS</li>
+                    <li class="menu-item">DOWNLOAD</li>
+                    <li class="menu-item">BLOG</li>
+                    <li class="menu-item">SUPPORT</li>
+                    <li class="menu-item">SHOP</li>
+                    <li class="menu-item">USD</li>
+                </ul>
+            </nav>
+        </div>
+    </header>
+    <div class="container">
+        <div class="landing">
+            <img class="bg-mask" src="./img/landing.jpg" alt="landing-img">
+            <div class="slogan">
+                <h1>A CONSOLE FOR<br />EVERY WORKFLOW</h1>
+                <p>Discover the perfect view for yours.</p>
+            </div>
+        </div>
+
+        <div class="main">
+            <div class="view-items">
+                <div class="console-img"></div>
+                <div class="words">NO.1 CONSOLE</div>
+            </div>
+            <div class="view-items">
+                <div class="console-img"></div>
+                <div class="words">NO.2 CONSOLE</div>
+            </div>
+            <div class="view-items">
+                <div class="console-img"></div>
+                <div class="words">NO.3 CONSOLE</div>
+            </div>
+            <div class="view-items">
+                <div class="console-img"></div>
+                <div class="words">NO.4 CONSOLE</div>
+            </div>
+        </div>
+
+        <div class="mid-banner">
+            <div class="items">
+                <div class="name"></div>
+                <p></p>
+            </div>
+            <div class="items">
+                <div class="name"></div>
+                <p></p>
+            </div>
+            <div class="items">
+                <div class="name"></div>
+                <p></p>
+            </div>
+            <div class="items">
+                <div class="name"></div>
+                <p></p>
+            </div>
+            <div class="items">
+                <div class="name"></div>
+                <p></p>
+            </div>
+            <div class="items">
+                <div class="name"></div>
+                <p></p>
+            </div>
+        </div>
+    </div>
+    <footer>
+        <div class="address title">305 King St W.Suite 502 Kitchener, ON Canada
+        </div>
+        <div class="link title">QUICK LINKS
+            <ul>
+                <li>Home</li>
+                <li>How it Works</li>
+                <li>Shop</li>
+                <li>Download</li>
+            </ul>
+        </div>
+        <div class="help title">HELP
+            <ul>
+                <li>FAQs</li>
+                <li>Support Center</li>
+                <li>Shipping and Sales</li>
+            </ul>
+        </div>
+        <div class="infos title">INFORMATIONS
+            <ul>
+                <li>About Us</li>
+                <li>Work with us</li>
+                <li>Privacy Policy</li>
+                <li>Terms of Use</li>
+                <li>Terms of sale</li>
+                <li>Press Kit</li>
+            </ul>
+        </div>
+        <div class="subscribe title">
+            <p>Master productivity with Creative Console and get all the latest news.</p>
+            <div class="submit">
+                <input type="text" placeholder="Email Address">
+                <button>SUBMIT</button>
+            </div>
+            <div class="media">
+                <div id="instagram">
+                    <img class="media-icons" src="./icons/instagram.svg" alt="instagram" fill="#ff8b68">
+                </div>
+                <div id="twitter">
+                    <img class="media-icons" src="./icons/twitter.svg" alt="twitter">
+                </div>
+                <div id="facebook">
+                    <img class="media-icons" src="./icons/facebook-f.svg" alt="facebook">
+                </div>
+                <div id="youtube">
+                    <img class="media-icons" src="./icons/youtube.svg" alt="youtube">
+                </div>
+            </div>
+        </div>
+    </footer>
 </body>
+
 </html>
