完成網頁切版

--- a/index.html
+++ b/index.html
@@ -37,46 +37,76 @@
         <div class="main">
             <div class="view-items">
                 <div class="console-img"></div>
-                <div class="words">NO.1 CONSOLE</div>
+                <div class="words">
+                    <p>NO.1 CONSOLE</p>
+                    <p class="price">$49</p>
+                </div>
             </div>
             <div class="view-items">
                 <div class="console-img"></div>
-                <div class="words">NO.2 CONSOLE</div>
+                <div class="words">
+                    <p>NO.2 CONSOLE</p>
+                    <p class="price">$49</p>
+                </div>
             </div>
             <div class="view-items">
                 <div class="console-img"></div>
-                <div class="words">NO.3 CONSOLE</div>
+                <div class="words">
+                    <p>NO.3 CONSOLE</p>
+                    <p class="price">$49</p>
+                </div>
             </div>
             <div class="view-items">
                 <div class="console-img"></div>
-                <div class="words">NO.4 CONSOLE</div>
+                <div class="words">
+                    <p>NO.4 CONSOLE</p>
+                    <p class="price">$49</p>
+                </div>
             </div>
         </div>
-
+        <img class="banner" src="./img/mid-banner.jpg" alt="banner">
         <div class="mid-banner">
             <div class="items">
-                <div class="name"></div>
-                <p></p>
+                <div class="blocks-img"></div>
+                <div class="words">
+                    <p>Look THIS</p>
+                    <p class="price">$36</p>
+                </div>
             </div>
             <div class="items">
-                <div class="name"></div>
-                <p></p>
+                <div class="blocks-img"></div>
+                <div class="words">
+                    <p>Look THIS</p>
+                    <p class="price">$36</p>
+                </div>
             </div>
             <div class="items">
-                <div class="name"></div>
-                <p></p>
+                <div class="blocks-img"></div>
+                <div class="words">
+                    <p>Look THIS</p>
+                    <p class="price">$36</p>
+                </div>
             </div>
             <div class="items">
-                <div class="name"></div>
-                <p></p>
+                <div class="blocks-img"></div>
+                <div class="words">
+                    <p>Look THIS</p>
+                    <p class="price">$36</p>
+                </div>
             </div>
             <div class="items">
-                <div class="name"></div>
-                <p></p>
+                <div class="blocks-img"></div>
+                <div class="words">
+                    <p>Look THIS</p>
+                    <p class="price">$36</p>
+                </div>
             </div>
             <div class="items">
-                <div class="name"></div>
-                <p></p>
+                <div class="blocks-img"></div>
+                <div class="words">
+                    <p>Look THIS</p>
+                    <p class="price">$36</p>
+                </div>
             </div>
         </div>
     </div>
@@ -112,7 +142,7 @@
             <p>Master productivity with Creative Console and get all the latest news.</p>
             <div class="submit">
                 <input type="text" placeholder="Email Address">
-                <button>SUBMIT</button>
+                <div class="submit-btn">SUBMIT</div>
             </div>
             <div class="media">
                 <div id="instagram">
